--- a/iniciando-react/src/styles/global.css
+++ b/iniciando-react/src/styles/global.css
@@ -1,3 +1,11 @@
 body {
   background-color: #CCDBDC;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: 500;
+}
